# CrashTeamEditor

./: .gitignore  .gitmodules  CrashTeamEditor.sln  CrashTeamEditor.vcxproj  CrashTeamEditor.vcxproj.filters  LICENSE  Makefile  README.md  renderer.cpp  renderer.h
.github/workflows/: build.yml
docs/: python_bindings.md
enc_temp_folder/9141c5fbcb908599afcfbac94413e022/: shader_templates.cpp
level_instances_assets/: Itemcrate.mtl  LetterC.mtl  Startflag.mtl  Timecrate1.mtl  Wumpafruit.mtl
python_bindings/: CMakeLists.txt  cte_bindings.cpp
src/: animtexture.cpp  animtexture.h  app.cpp  app.h  bsp.cpp  bsp.h  camera.cpp  camera.h  checkpoint.cpp  checkpoint.h  geo.cpp  geo.h  glad.c  globalimguiglglfw.h  gui_render_settings.cpp  gui_render_settings.h  io.cpp  io.h  lev.h  levdataextractor.cpp  levdataextractor.h  level.cpp  level.h  levelui.cpp  main.cpp  material.cpp  material.h  math.cpp  math.h  mesh.cpp  mesh.h  minimap.cpp  minimap.h  model.cpp  model.h  path.cpp  path.h  process.cpp  process.h  psx_types.h  (+32 more)
src/manual_third_party/: glad.h
